--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
     <main>
       <article>
         <h1>To-Do list di Tommaso</h1>
-        <form>
+        <form id="form">
           <label for="to-do-name">Cosa devi fare?</label>
           <input type="text" id="to-do-name" />
-          <button>INSERISCI</button>
+          <button id="button-submit">INSERISCI</button>
         </form>
       </article>
+      <article id="saved-to-do"></article>
     </main>
 
     <footer></footer>
